--- a/calico-cloud_versioned_docs/version-3.16/get-started/connect/usage-metrics.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/get-started/connect/usage-metrics.mdx
@@ -15,7 +15,7 @@ In Manager UI:
 
 ## How Node Hours are calculated
 
-`Node Hours` are calculated for a single node by dividing the vCPU of each node by four, rounding up, and then *adding them together*. Because the calculation is on a per-node basis, the results are not the same as adding up all the vCPU and dividing by four. `Node Hours` are updated every hour, and change every month because of the different number of days in a month.
+**Node Hours** are calculated for a single node by dividing the vCPU of each node hour by four, rounding up, and then *adding them together*. Because the calculation is on a per-node basis, the results are not the same as adding up all the vCPU and dividing by four. **Node Hours** are updated every hour, and the total node hours accrued by a single node running for a full month will change depending on the number of days in a month.
 
-For example, if you install {{prodname}} on a single machine with 32 physical cores (64 cores are presented to the kernel), and if each node only goes up to 4 vCPU, the result is 64 vcpu / 4 = 16 billable nodes.
+For example, if you install {{prodname}} on a single machine with 32 physical cores (64 cores are presented to the kernel), and if each node hour only goes up to 4 vCPU, the result is 64 vcpu / 4 = 16 billable nodes.
 
