--- a/calico-enterprise/threat/security-event-management.mdx
+++ b/calico-enterprise/threat/security-event-management.mdx
@@ -32,7 +32,7 @@ Security events indicate that a threat actor may be present in your Kubernetes c
 **Limitations**
 
 - Only WAF basic security events. Over time, the dashboard will contain a full range of {{prodname}} security events.
-- All users can view and edit the page
+- You cannot control which users can view or edit the page using fine-grained role-based access controls
 
 ## Security events dashboard
 
