DOCS-1696-CC-usage-updates

--- a/calico-cloud_versioned_docs/version-3.15/visibility/elastic/archive-storage.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/visibility/elastic/archive-storage.mdx
@@ -158,7 +158,7 @@ This how-to guide uses the following {{prodname}} features:
 
 **Support**
 
-In this release, only [Splunk Enterprise](https://www.splunk.com/en_us/download/splunk-enterprise.html?utm_campaign=google_amer_en_search_brand&utm_source=google&utm_medium=cpc&utm_content=Splunk_Enterprise_Demo&utm_term=splunk%20enterprise&_bk=splunk%20enterprise&_bt=439715964910&_bm=e&_bn=g&_bg=43997960527&device=c&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFMDEaiLqaUcE1vGv7bnUe5qclx81iydekBjibZ0ueN5w08Y45rXHE0aAmu8EALw_wcB) is supported.
+In this release, only [Splunk Enterprise](https://www.splunk.com/en_us/products/splunk-enterprise.html) is supported.
 
 {{prodname}} uses Splunk's **HTTP Event Collector** to send data to Splunk server. To copy the flow, audit, and dns logs to Splunk, follow these steps:
 
