--- a/calico-enterprise/visibility/elastic/archive-storage.mdx
+++ b/calico-enterprise/visibility/elastic/archive-storage.mdx
@@ -168,9 +168,7 @@ Because {{prodname}} and Kubernetes logs are integral to {{prodname}} diagnostic
 </TabItem>
 <TabItem label="Splunk" value="Splunk-2">
 
-**Support**
-
-In this release, only [Splunk Enterprise](https://www.splunk.com/en_us/download/splunk-enterprise.html?utm_campaign=google_amer_en_search_brand&utm_source=google&utm_medium=cpc&utm_content=Splunk_Enterprise_Demo&utm_term=splunk%20enterprise&_bk=splunk%20enterprise&_bt=439715964910&_bm=e&_bn=g&_bg=43997960527&device=c&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFMDEaiLqaUcE1vGv7bnUe5qclx81iydekBjibZ0ueN5w08Y45rXHE0aAmu8EALw_wcB) is supported.
+**Support** In this release, only [Splunk Enterprise](https://www.splunk.com/en_us/products/splunk-enterprise.html) is supported.
 
 {{prodname}} uses Splunk's **HTTP Event Collector** to send data to Splunk server. To copy the flow, audit, and dns logs to Splunk, follow these steps:
 
