--- a/calico/operations/ebpf/install.mdx
+++ b/calico/operations/ebpf/install.mdx
@@ -300,7 +300,7 @@ as shown below.
 
 For example:
 
-```
+```yaml
 # This section includes base {{prodname}} installation configuration.
 
 apiVersion: operator.tigera.io/v1
