--- a/calico-cloud_versioned_docs/version-3.17/network-policy/beginners/simple-policy-cnx.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/network-policy/beginners/simple-policy-cnx.mdx
@@ -2,7 +2,7 @@
 description: Learn the extra features for Calico Cloud that make it so important for production environments.
 ---
 
-# {{prodname}} for Kubernetes demo
+# Calico Cloud for Kubernetes demo
 
 This guide is a variation of the [simple policy demo](../../tutorials/kubernetes-tutorials/kubernetes-policy-basic.mdx) intended to introduce the extra features of {{prodname}} to people already familiar with Project Calico for Kubernetes.
 
