--- a/calico-cloud_versioned_docs/version-3.17/operations/comms/certificate-management.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/operations/comms/certificate-management.mdx
@@ -2,7 +2,7 @@
 description: Control the issuer of certificates used by Calico Cloud.
 ---
 
-# Manage TLS certificates used by {{prodname}}
+# Manage TLS certificates used by Calico Cloud
 
 ## Big picture
 
