--- a/calico-cloud_versioned_docs/version-3.17/visibility/elastic/dns/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/visibility/elastic/dns/index.mdx
@@ -3,7 +3,7 @@ description: Configure and filter DNS logs.
 hide_table_of_contents: true
 ---
 
-# Manage DNS logs for {{prodname}}
+# Manage DNS logs for Calico Cloud
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
