--- a/calico-enterprise_versioned_docs/version-3.16/operations/comms/crypto-auth.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/operations/comms/crypto-auth.mdx
@@ -26,7 +26,7 @@ For detailed reference information on TLS configuration parameters, refer to:
 
 - **Node**: [Node-Typha TLS configuration](../../reference/component-resources/node/felix/configuration.mdx#felix-typha-tls-configuration)
 
-# {{prodname}} Manager connections
+# Calico Enterprise Manager connections
 
 Tigera {{prodname}} Manager's web interface, run from your browser, uses HTTPS to securely communicate
 with the {{prodname}} Manager, which in turn, communicates with the Kubernetes and {{prodname}} API
