--- a/calico-cloud_versioned_docs/version-3.17/threat/security-event-management.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/threat/security-event-management.mdx
@@ -47,11 +47,7 @@ Provides actions to remediate the detection and stop the attack from progressing
 
 **Severity**
 
-{{prodname}} calculates severity (Critical, High, Medium, Low) using a combination of NIST CVSS 3.0 and MITRE IDs.
-
-**MITRE IDs**
-
-Multiple MITRE IDs may be associated with a security event.
+Alert severity is a score given to a detection (Critical, High, Medium, Low), based upon the risk assessment of the alert.
 
 **Attack Vector**
 - Network
@@ -70,6 +66,11 @@ Multiple MITRE IDs may be associated with a security event.
 | [Defense Evasion](https://attack.mitre.org/tactics/TA0005/)  | Avoid detection                 | Masquerade and hide malware to avoid detection to compromise software, data, scripts, and processes. |
 | [Discovery](https://attack.mitre.org/tactics/TA0007/)        | Determine your environment      | Gain knowledge about your system and internal network.       |
 
+:::note
+
+Multiple MITRE IDs may be associated with a security event.
+
+:::
 
 ### Frequently asked questions
 
