--- a/calico-enterprise_versioned_docs/version-3.16/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/multicluster/federation/kubeconfig.mdx
@@ -75,7 +75,7 @@ Although this example applies remote cluster configurations symmetrically across
 
 ### Create kubeconfig files
 
-In this section, we'll create the kubeconfig files that local clusters will use to connect to the remote cluster. For each cluster in the federation, follow these steps.
+For each cluster in the federation, we will create a kubeconfig. This kubeconfig will be used by other clusters in the federation to establish remote cluster connections to the cluster specified in the kubeconfig. To create the required kubeconfigs, follow these steps for each cluster in the federation.
 
 1. Access the cluster using a `kubeconfig` with administrative privileges.
 
