--- a/calico-cloud/get-started/connect/install-cluster.mdx
+++ b/calico-cloud/get-started/connect/install-cluster.mdx
@@ -26,6 +26,7 @@ Choose your install option and follow the steps.
 
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
+1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
 1. Click **Connect** and follow the wizard.
 1. Monitor the progress on the Managed Clusters page.
 
@@ -48,6 +49,7 @@ Choose your install option and follow the steps.
 
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
+1. (Optional) If you must install a specific older release, select the {{prodname}} version you want to install. We always recommend the latest version, which is installed by default.
 1. Click **Advanced Options**, and select both **Install via helm** and **Install private registry**. (Private registry supports only Helm).
 
    ![private-registry](/img/calico-cloud/private-registry.png)
@@ -61,6 +63,7 @@ Choose your install option and follow the steps.
 
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
+1. Select the version of {{prodname}} you want to install
 1. Click **Advanced Options**, and select **Install via helm**.
 
    ![helm](/img/calico-cloud/helm.png)
