--- a/calico-cloud/get-started/upgrade-cluster.mdx
+++ b/calico-cloud/get-started/upgrade-cluster.mdx
@@ -7,6 +7,9 @@ description: Steps to upgrade to the latest version of Calico Cloud.
 To upgrade managed clusters to the latest version of {{prodname}}:
 
 1. In Manager UI, go to **Managed Clusters**.
-1. Highlight the cluster to upgrade in the list.
-1. Click the **Reinstall** icon.
-1. Copy the command and apply it to appropriate cluster.
+1. Click the **Actions** link on the cluster you want to reinstall, and then select  **ReInstall**.
+1. Select the version of {{prodname}} you want to install, you can select the currently installed version, or any newer supported version
+1. Click **Next**, then copy the command and apply it to appropriate cluster.
+
+![reinstall](/img/calico-cloud/managed-clusters-reinstall.png)
+![reinstall-step1](/img/calico-cloud/managed-clusters-reinstall-step1.png)
