--- a/calico-cloud/get-started/connect/install-cluster.mdx
+++ b/calico-cloud/get-started/connect/install-cluster.mdx
@@ -27,6 +27,13 @@ Choose your install option and follow the steps.
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
 1. Select the version of {{prodname}} you want to install, we recommend the latest version, which is selected by default
+   :::note
+
+   Currently the only option available to install is the latest version. More versions will become available as newer versions are released
+   and as older versions become qualified.
+
+   :::
+
 1. Click **Connect** and follow the wizard.
 1. Monitor the progress on the Managed Clusters page.
 
@@ -50,6 +57,13 @@ Choose your install option and follow the steps.
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
 1. Select the version of {{prodname}} you want to install, we recommend the latest version, which is selected by default
+   :::note
+
+   Currently the only option available to install is the latest version. More versions will become available as newer versions are released
+   and as older versions become qualified.
+
+   :::
+
 1. Click **Advanced Options**, and select both **Install via helm** and **Install private registry**. (Private registry supports only Helm).
 
    ![private-registry](/img/calico-cloud/private-registry.png)
@@ -64,6 +78,13 @@ Choose your install option and follow the steps.
 1. On the **Managed Clusters** page, click **Connect Cluster**.
 1. Add the **Cluster Name**, and select the **Cluster Type**.
 1. Select the version of {{prodname}} you want to install
+   :::note
+
+   Currently the only option available to install is the latest version. More versions will become available as newer versions are released
+   and as older versions become qualified.
+
+   :::
+
 1. Click **Advanced Options**, and select **Install via helm**.
 
    ![helm](/img/calico-cloud/helm.png)
