--- a/calico-cloud_versioned_docs/version-3.17/get-started/upgrade-cluster.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/get-started/upgrade-cluster.mdx
@@ -9,6 +9,13 @@ To upgrade managed clusters to the latest version of {{prodname}}:
 1. In Manager UI, go to **Managed Clusters**.
 1. Click the **Actions** link on the cluster you want to reinstall, and then select  **ReInstall**.
 1. Select the version of {{prodname}} you want to install, you can select the currently installed version, or any newer supported version
+   :::note
+
+   Currently the only option available to install is the latest version. More versions will become available as newer versions are released
+   and as older versions become qualified.
+
+   :::
+
 1. Click **Next**, then copy the command and apply it to appropriate cluster.
 
 ![reinstall](/img/calico-cloud/managed-clusters-reinstall.png)
