apply review suggestions

--- a/calico-cloud/get-started/upgrade-cluster.mdx
+++ b/calico-cloud/get-started/upgrade-cluster.mdx
@@ -16,7 +16,7 @@ To upgrade managed clusters to the latest version of {{prodname}}:
 
    :::
 
-1. Click **Next**, then copy the command and apply it to appropriate cluster.
+1. Click **Next**, copy the command, and apply it to appropriate cluster.
 
 ![reinstall](/img/calico-cloud/managed-clusters-reinstall.png)
 ![reinstall-step1](/img/calico-cloud/managed-clusters-reinstall-step1.png)
