--- a/calico_versioned_docs/version-3.24/operations/calicoctl/install.mdx
+++ b/calico_versioned_docs/version-3.24/operations/calicoctl/install.mdx
@@ -8,13 +8,13 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import CodeBlock from '@theme/CodeBlock';
 
-import { version } from '@site/calico/variables';
+import { releaseTitle } from '../../variables.js';
 
 export function buildUrl() {
   const url =
-    version === 'master'
+    releaseTitle === 'master'
       ? 'https://github.com/projectcalico/calico/releases/latest/download'
-      : 'https://github.com/projectcalico/calico/releases/download/';
+      : `https://github.com/projectcalico/calico/releases/download/${releaseTitle}`;
   return url;
 }
 
