Fixes CC release notes

--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -91,7 +91,77 @@ You can now create custom role-based access controls for two new roles: "Usage M
 - Dragging tiers to modify their order is currently not working in the UI, though you can still change its order when editing a tier
 - Policy recommendations may generate rules with ports and protocols for intra-namespace traffic. This will be modified in the next patch release to exclude ports and protocols and provide an option to Allow or Pass this traffic.
 
-# Release notes
+## June 6, 2023
+
+### In-cluster scanning with Image Assurance
+
+Calico Cloud now includes the ability to scan and monitor the images running in your Kubernetes clusters for new vulnerabilities.
+In-cluster scanning will scan any new images not previously scanned, and continuously monitor the BOM (Bill of Materials) for running images that have prior scan results.
+
+### New detectors for container threat detection
+
+We've added several new detectors for container threat detection.
+These detectors help identify unsanctioned use of network tools, task scheduling, container admin and Docker commands, and much more.
+Calico Cloud now includes over 40 different detectors across each category of the [MITRE ATT&CK Matrix](https://attack.mitre.org/).
+
+## May 2, 2023
+
+### General improvements and bug fixes
+
+This release includes a number of performance improvements and bug fixes.
+
+## April 24, 2023
+
+### Depreciated support for RKE, RKE2
+
+Calico Cloud no longer supports installation on RKE or RKE2.
+
+## April 11, 2023
+
+### Updates to Managed Clusters
+
+The **Managed Clusters** page has been redesigned to make it easier and more intuitive to search and filter your clusters.
+
+### Egress gateways for AKS and Azure
+
+{{prodname}} adds egress gateway support for Microsoft Azure and AKS. Egress gateways allow you to identify the namespaces associated with egress traffic outside of your cluster. [Egress gateways for AKS and Azure](../networking/egress/egress-gateway-azure).
+
+### UI for workload-based Web Application Firewall (WAF)
+
+{{prodname}} includes a new UI to enable and configure a workload-based Web Application Firewall. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx#enable-waf).
+
+### Application layer policy with Envoy
+
+{{prodname}} now includes support for application layer policy with Envoy, enabling platform operators to define authorization rules in {{prodname}} policies for protocols such as HTTP and gRPC. For more information, see [Application layer policies](../network-policy/application-layer-policies/).
+
+
+### Service Graph performance optimizations
+
+{{prodname}} added several optimizations to improve the performance of Service Graph for clusters with larger numbers of namespaces.
+
+### Improvements to Envoy to accommodate advanced ingress controllers
+
+{{prodname}} improves its Envoy deployment so you can use this feature in clusters with ingress controllers that perform advanced load balancing. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx).
+
+### Improved {{prodname}} component security
+
+{{prodname}} components were updated with more restrictive access for pods and containers using the Kubernetes security context:
+- Non-root context whenever possible
+- Root context and privilege escalation are used only when necessary
+- Added `drop ALL capabilities` for pod security
+- Enabled `RuntimeDefault` as the default seccomp profile for all workloads
+
+## February 28, 2023
+
+### Updates
+
+- Adds Bottlerocket support for Container Threat Detection.
+- Adds support for scanning multiple images with Image Assurance
+
+### Bug fixes
+
+- Fixes "Kibana" menu item rename to "Logs".
+- Bug fixes for Container Threat Detection alerts.
 
 ## February 7, 2023
 
@@ -150,7 +220,7 @@ All users can view the status and health of the Calico Cloud service on our new 
 
 CLI Version v1.1.2.
 
-New CLI will now check that it is compatible with the the latest Image Assurance API.
+New CLI will now check that it is compatible with the latest Image Assurance API.
 
 ### Container Threat Detection
 
