DOCS-1745: RN improvements for CE

--- a/calico-enterprise/release-notes/index.mdx
+++ b/calico-enterprise/release-notes/index.mdx
@@ -2,6 +2,82 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico Enterprise X.Y release notes
 
-<ReleaseNotes />
+Boilerplate summary text
+
+## New features and enhancements
+
+### Feature one
+
+stuff about this feature
+
+For more information, see [link](https://docs.tigera.io).
+
+### Feature two
+
+stuff about this feature
+
+For more information, see [link](https://docs.tigera.io).
+
+<!-- We can break this up by component. H3 subheads or additions to titles -->
+
+<!-- Optional, as needed
+
+## Deprecated and removed features
+
+The following features are being deprecated or removed in this release:
+
+-->
+
+<!-- Optional, as needed
+## Technology Preview features
+
+A sentence that explains what technology preview features are.
+
+### TP feature name
+
+stuff about this feature
+
+For more information, see [link](https://docs.tigera.io).
+-->
+
+## Bug fixes
+
+<!-- Follow this template: Problem-Cause-Fix-Result -->
+
+* Previously, this bad thing happened, which made it impossible to do this.
+  We fixed it, so now you can do the thing you wanted to do.
+* Bla bla bla bug 2.
+
+## Security fixes
+
+* Description of security fix.
+* Another description of security fix.
+
+## Known issues
+
+* This thing doesn't work as expected.
+  Here's the workaround: bla bla bla
+* This other thing doesn't work as expected.
+  There's no workaround.
+
+## Release details
+
+### Calico Enterprise X.Y.0 early preview release
+
+DD M YYYY
+
+### Calico Enterprise X.Y.1 general availability release
+
+DD M YYYY
+
+#### New features
+
+#### Enhancements
+
+#### Bug fixes
+
+#### How to update
+
+To install this update on your cluster, see [Install a patch release](../getting-started/manifest-archive.mdx).
