--- a/calico-cloud_versioned_docs/version-3.17/get-started/connect/checklist.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/get-started/connect/checklist.mdx
@@ -4,6 +4,15 @@ description: Review this checklist before opening a Support ticket.
 
 # Troubleshooting checklist
 
+## Installation command failures
+
+**Error: rendered manifests contain a resource that already exists. Unable to continue with install: CustomResourceDefinition "installers.operator.calicocloud.io" in namespace "" exists**
+
+(Helm installations only) The `installers.operator.calicocloud.io` CRD was originally installed as an unmanaged CRD by helm. Run the below command to apply the appropriate labels & annotations, and then rerun the installation command.
+```bash
+kubectl patch crd installers.operator.calicocloud.io -p '{"metadata": {"annotations": {"meta.helm.sh/release-name":"calico-cloud-crds","meta.helm.sh/release-namespace":"calico-cloud"},"labels":{"app.kubernetes.io/managed-by":"Helm"}}}'
+```
+
 ## Check {{prodname}} installation
 
 Installing {{prodname}} on your Kubernetes cluster is managed by the {{prodname}} operator. The {{prodname}} operator is deployed as a Deployment in the `calico-cloud` namespace, and records status in a custom resource named `installer`.
