Add GKE as unsupported for WALF, ALP and L7

--- a/calico-cloud/visibility/elastic/l7/configure.mdx
+++ b/calico-cloud/visibility/elastic/l7/configure.mdx
@@ -38,6 +38,7 @@ L7 logs are visible in the Manager UI, service graph, in the HTTP tab.
 
 **Not supported**
 - eBPF dataplane
+- GKE
 
 **Limitations**
 
