--- a/calico-cloud_versioned_docs/version-3.17/visibility/elastic/l7/configure.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/visibility/elastic/l7/configure.mdx
@@ -38,6 +38,7 @@ L7 logs are visible in the Manager UI, service graph, in the HTTP tab.
 
 **Not supported**
 - eBPF dataplane
+- GKE
 
 **Limitations**
 
