--- a/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/ebpf/install.mdx
@@ -77,6 +77,8 @@ and in particular, pushing the networking capabilities of the latest Linux kerne
 - SCTP (either for policy or services).
 - `Log` action in policy rules.
 - Tagged VLAN devices.
+- L7 logs
+- Web application firewall (WAF)
 
 ### Performance
 
