--- a/calico-enterprise_versioned_docs/version-3.18/operations/ebpf/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/operations/ebpf/install.mdx
@@ -69,6 +69,8 @@ eBPF supports AKS with Calico CNI and {{prodname}} network policy. However, with
 - `Log` action in policy rules
 - Tagged VLAN devices
 - L7 logs
+- Application layer policies
+- Web application firewall (WAF)
 
 **Recommendations for performance**
 
