Add WAF to unsupported list for Windows

--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/limitations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/limitations.mdx
@@ -17,7 +17,7 @@ description: Review limitations before starting installation.
 | Visibility and troubleshooting | **Supported**:<br />- Flow logs for traffic to/from windows pods with [limitations](#flow-log-limitations) <br />- Audit logs<br />- Alerts                                                                                                                                |
 |                                | **Not supported**: <br />- Packet capture<br />- DNS logs<br />- iptable logs<br />- L7 metrics                                                                                                                                                                            |
 | Threat defense                 | **Supported**: Block traffic to/from src/dst based on a threat feed                                                                                                                                                                                                        |
-|                                | **Not supported**: <br />- Honeypods<br />- Anomaly detection                                                                                                                                                                                                              |
+|                                | **Not supported**: <br />- Honeypods<br />- Anomaly detection<br />- WAF                                                                                                                                                                                                              |
 | Multi-cluster management       | **Not supported**, including federated identity endpoints and services                                                                                                                                                                                                     |
 | Compliance and security        | **Supported**: <br />- Compliance reports: network-access, inventory, policy-audit only                                                                                                                                                                                    |
 |                                | **Not supported**: <br />- CIS benchmark and other reports<br />- Encryption with Wireguard                                                                                                                                                                                |
