--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/windows-calico/limitations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/windows-calico/limitations.mdx
@@ -13,7 +13,7 @@ description: Review limitations before starting installation.
 | Networking                     | - Overlay mode with BGP peering<br />- IP in IP overlay with BGP routing<br />- Cross-subnet support and MTU setting for VXLAN<br />- IPv6 and dual stack<br />- Dual-ToR<br />- Service advertisement<br />- Multiple networks to pods                  |
 | Policy                         | - Staged network-policy<br />- Firewall integrations<br />- Policy for hosts (host endpoints, including automatic host endpoints)<br />- Tiered policy: TKG, GKE, AKS<br />- WAF integration<br />- AWS firewall integration<br />- Fortinet integration |
 | Visibility and troubleshooting | - Packet capture<br />- DNS logs<br />- iptable logs<br />- L7 logs                                                                                                                                                                                      |
-| Threat defense                 | - Honeypods<br />- DPI<br />- Performance hotspots                                                                                                                                                                                                       |
+| Threat defense                 | - Honeypods<br />- DPI<br />- Performance hotspots<br />- WAF                                                                                                                                                                                                       |
 | Multi-cluster management       | - Multi-cluster management federated identity endpoints and services<br />- Federated endpoint identity and services                                                                                                                                     |
 | Compliance and security        | - CIS benchmark and other reports<br />- Wireguard encryption for pod-to-pod traffic and host-to-host traffic                                                                                                                                            |
 | Monitoring                     | - Prometheus monitoring                                                                                                                                                                                                                                  |
