RN CC 17.1.1 updates

--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -6,11 +6,15 @@ description: What's new, and why features provide value for upgrading.
 
 ## September 11, 2023 (version 17.1.1)
 
+### New features and enhancements
+
+* We redesigned a section of the Image Assurance UI to make it easier to see how vulnerable an image is.
+* We made improvements to the way Container Threat Detection processes large volumes of alerts.
+
 ### Bug fixes
 
 * We fixed a problem that caused the user interface to crash when a user attempted to edit a policy.
-* Sasha now processes only Container Threat Detection alerts.
-* Sasha now performs better for large volumes of alerts.
+* We fixed a problem that prevented certain images from being scanned.
 
 ## September 5, 2023 (version 17.1.0)
 
